# BytebeatPlayground

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  font.ipp  font.pl  fonttest  fonttest.cpp  help.txt  main.cpp  texts.i
doc/: help.txt
src/: font-test.cxx  main.cxx  texts.i
src/headers/: visual.h
src/visual/: font.charset  font.pl  visual.c
